--- a/libs/common/src/lib/progress-bar/progress-bar.component.html
+++ b/libs/common/src/lib/progress-bar/progress-bar.component.html
@@ -1,4 +1,5 @@
 <div [class]="'progress-bar progress-bar-' + track">
-  <div class="progress"
-        [style.width.%]="progress"></div>
+  <div
+    class="progress"
+    [style.width.%]="progress"></div>
 </div>
