--- a/libs/common/src/lib/user/logout/logout.component.html
+++ b/libs/common/src/lib/user/logout/logout.component.html
@@ -1,2 +1,5 @@
-<div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" class="user-background">
-</div>
+<div
+  fxLayout="column"
+  fxLayoutAlign="center center"
+  fxLayoutGap="10px"
+  class="user-background"></div>
