--- a/libs/common/src/lib/user/user-container/user-container.component.scss
+++ b/libs/common/src/lib/user/user-container/user-container.component.scss
@@ -9,7 +9,8 @@
     background-image: none;
   }
 
-  &:before, &:after {
+  &:before,
+  &:after {
     @include media-breakpoint('gt-xs') {
       content: '';
       display: block;
