--- a/libs/common/src/lib/sidebar/sidebar.component.html
+++ b/libs/common/src/lib/sidebar/sidebar.component.html
@@ -1,7 +1,5 @@
 <ng-container *ngIf="template">
   <ng-template
     [ngTemplateOutlet]="template"
-    [ngTemplateOutletContext]="{ open: open, unfolded: !!unfolded }"
-  >
-  </ng-template>
+    [ngTemplateOutletContext]="{ open: open, unfolded: !!unfolded }"></ng-template>
 </ng-container>
