--- a/libs/common/src/lib/user/signup/signup.component.html
+++ b/libs/common/src/lib/user/signup/signup.component.html
@@ -2,36 +2,50 @@
   <stf-user-container-logo>
     <div class="signup">
       <div class="signup_description">
-        <strong>{{ 'login.signup' | translate }} </strong>
+        <strong>{{ 'login.signup' | translate }}</strong>
         <span>{{ 'login.join_expedition' | translate }}</span>
       </div>
       <div class="signup_form_wrapper">
         <div class="signup_form">
-          <form [formGroup]="signupForm" (ngSubmit)="submit()">
+          <form
+            [formGroup]="signupForm"
+            (ngSubmit)="submit()">
             <div class="signup_field">
-              <pa-input formControlName="username"
-                        required
-                        autocapitalize="off"
-                        [errorMessages]="validationMessages.username"
-                        (enter)="onEnterPressed('username')">{{ 'login.full_name' | translate }}</pa-input>
+              <pa-input
+                formControlName="username"
+                required
+                autocapitalize="off"
+                [errorMessages]="validationMessages.username"
+                (enter)="onEnterPressed('username')">
+                {{ 'login.full_name' | translate }}
+              </pa-input>
             </div>
             <div class="signup_field">
-              <pa-input #email
-                        formControlName="email"
-                        type='email'
-                        [errorMessages]="validationMessages.email"
-                        (enter)="onEnterPressed('email')">{{ 'login.email' | translate }}</pa-input>
+              <pa-input
+                #email
+                formControlName="email"
+                type="email"
+                [errorMessages]="validationMessages.email"
+                (enter)="onEnterPressed('email')">
+                {{ 'login.email' | translate }}
+              </pa-input>
             </div>
             <div class="signup_policy">
               <pa-checkbox [(value)]="acceptedConditions">
-                <span>{{ 'login.agree' | translate }} </span>
-                <a href="https://nuclia.com/terms-and-conditions/"
-                   target="_blank">{{ 'login.terms_and_conditions' | translate }}</a>
+                <span>{{ 'login.agree' | translate }}</span>
+                <a
+                  href="https://nuclia.com/terms-and-conditions/"
+                  target="_blank">
+                  {{ 'login.terms_and_conditions' | translate }}
+                </a>
               </pa-checkbox>
               <pa-checkbox [(value)]="acceptedPrivacy">
-                <span>{{ 'login.agree' | translate }} </span>
-                <a href="https://nuclia.com/privacy-policy/"
-                   target="_blank">{{ 'login.privacy_policy' | translate }}</a>
+                <span>{{ 'login.agree' | translate }}</span>
+                <a
+                  href="https://nuclia.com/privacy-policy/"
+                  target="_blank">
+                  {{ 'login.privacy_policy' | translate }}
+                </a>
               </pa-checkbox>
             </div>
 
@@ -39,15 +53,17 @@
               <div *ngIf="emailAlreadyExists">{{ 'login.email_already_exists' | translate }}</div>
             </div>
             <footer class="pa-dual-buttons">
-              <pa-button aspect="basic"
-                         [routerLink]="['/user/login']"
-                         queryParamsHandling="merge">
+              <pa-button
+                aspect="basic"
+                [routerLink]="['/user/login']"
+                queryParamsHandling="merge">
                 {{ 'generic.cancel' | translate }}
               </pa-button>
-              <pa-button [disabled]="signupForm.invalid || !acceptedConditions || !acceptedPrivacy"
-                         kind="primary"
-                         type="submit">
-                {{'Sign Up' | translate}}
+              <pa-button
+                [disabled]="signupForm.invalid || !acceptedConditions || !acceptedPrivacy"
+                kind="primary"
+                type="submit">
+                {{ 'Sign Up' | translate }}
               </pa-button>
             </footer>
           </form>
