--- a/libs/common/src/lib/user/user-container/user-container.component.html
+++ b/libs/common/src/lib/user/user-container/user-container.component.html
@@ -1,9 +1,18 @@
-<div class="user-background" fxLayout="column">
-  <div class="user-container" [ngStyle]="{'width': widthSm}">
+<div
+  class="user-background"
+  fxLayout="column">
+  <div
+    class="user-container"
+    [ngStyle]="{ width: widthSm }">
     <ng-content></ng-content>
   </div>
   <ng-container *ngIf="showLink">
-    <a class="go-web" href="https://flaps.io" fxLayout="row" fxLayoutAlign="center center" [ngStyle.gt-xs]="{'width': widthSm}">
+    <a
+      class="go-web"
+      href="https://flaps.io"
+      fxLayout="row"
+      fxLayoutAlign="center center"
+      [ngStyle.gt-xs]="{ width: widthSm }">
       {{ 'login.gogetflaps' | translate }}
     </a>
   </ng-container>
