--- a/libs/components/src/lib/context-menu/context-menu.component.html
+++ b/libs/components/src/lib/context-menu/context-menu.component.html
@@ -1,4 +1,6 @@
-<mat-menu #menu="matMenu" class="context-menu">
+<mat-menu
+  #menu="matMenu"
+  class="context-menu">
   <div [style.minWidth]="minWidth ? minWidth : null">
     <ng-content></ng-content>
   </div>
