--- a/libs/components/src/lib/user-avatar/user-avatar-simple/user-avatar-simple.component.scss
+++ b/libs/components/src/lib/user-avatar/user-avatar-simple/user-avatar-simple.component.scss
@@ -6,9 +6,9 @@
   width: 40px;
   height: 40px;
 
-  &-black-mode{
+  &-black-mode {
     background-color: var(--stf-black);
-    color: var(--stf-white)
+    color: var(--stf-white);
   }
   &-small {
     width: 24px;
