Reformat sistema lib with prettier

--- a/libs/sistema/src/lib/back-button/back-button.component.html
+++ b/libs/sistema/src/lib/back-button/back-button.component.html
@@ -1,7 +1,8 @@
-<pa-button [routerLink]="link"
-           iconAndText
-           icon="chevron-left"
-           aspect="basic"
-           size="small">
+<pa-button
+  [routerLink]="link"
+  iconAndText
+  icon="chevron-left"
+  aspect="basic"
+  size="small">
   <a [routerLink]="link">{{ 'generic.back' | translate }}</a>
 </pa-button>
