--- a/libs/sistema/src/lib/label/label.component.html
+++ b/libs/sistema/src/lib/label/label.component.html
@@ -1,6 +1,7 @@
-<pa-chip-selectionable [backgroundColor]="backgroundColor"
-                       [borderColor]="borderColor"
-                       [textColor]="textColor"
-                       (select)="selectLabel.emit()">
+<pa-chip-selectionable
+  [backgroundColor]="backgroundColor"
+  [borderColor]="borderColor"
+  [textColor]="textColor"
+  (select)="selectLabel.emit()">
   <ng-content></ng-content>
 </pa-chip-selectionable>
