--- a/libs/sistema/src/lib/password-input/password-input.component.scss
+++ b/libs/sistema/src/lib/password-input/password-input.component.scss
@@ -1,5 +1,4 @@
-@import "variables";
-
+@import 'variables';
 
 .nsi-password-input {
   align-items: flex-start;
@@ -13,11 +12,7 @@
     color: $color-text-field-label-regular;
   }
 
-
   .pa-field {
     flex: 1 0 auto;
   }
 }
-
-
-
