--- a/libs/sistema/src/lib/progress/spinner/spinner.component.html
+++ b/libs/sistema/src/lib/progress/spinner/spinner.component.html
@@ -1,4 +1,6 @@
-<div class="spinner-wrapper" [class]="size">
+<div
+  class="spinner-wrapper"
+  [class]="size">
   <div class="spinner">
     <div class="inner">
       <div class="gap"></div>
