--- a/libs/sistema/theme/tokens/_spacing.tokens.scss
+++ b/libs/sistema/theme/tokens/_spacing.tokens.scss
@@ -1,5 +1,6 @@
 // Spacing
-$spacer: .5rem;    // 1 unit - 8px - 0.5rem
+$spacer: 0.5rem; // 1 unit - 8px - 0.5rem
+/* prettier-ignore */
 $rhythm: (
   0: 0,
   .25: ($spacer * .25),   //   .25 unit -   2px -   .125 rem
