--- a/libs/sistema/src/lib/back-button/back-button.component.scss
+++ b/libs/sistema/src/lib/back-button/back-button.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../pastanaga-angular/projects/pastanaga-angular/src/styles/variables";
+@import '../../../../pastanaga-angular/projects/pastanaga-angular/src/styles/variables';
 
 :host pa-button ::ng-deep .pa-button {
   padding: rhythm(0.5) rhythm(1) rhythm(0.5) 0;
