--- a/libs/sistema/src/lib/progress/spinner/spinner.component.scss
+++ b/libs/sistema/src/lib/progress/spinner/spinner.component.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@import 'variables';
 
 $inner-size-small: rhythm(4);
 $inner-size-medium: rhythm(6);
@@ -23,7 +23,7 @@ $inner-size-large: rhythm(12);
     position: absolute;
     overflow: hidden;
     left: 50%;
-    margin-left: - $inner-size-medium;
+    margin-left: -$inner-size-medium;
     animation: outer-rotate 2.91667s linear infinite;
 
     .inner {
@@ -80,8 +80,7 @@ $inner-size-large: rhythm(12);
           right: 0;
           border-left-color: transparent;
           animation: right-wobble 1.3125s cubic-bezier(0.35, 0, 0.25, 1) infinite;
-          -webkit-animation: right-wobble 1.3125s cubic-bezier(0.35, 0, 0.25, 1)
-          infinite;
+          -webkit-animation: right-wobble 1.3125s cubic-bezier(0.35, 0, 0.25, 1) infinite;
         }
       }
     }
@@ -93,7 +92,7 @@ $inner-size-large: rhythm(12);
   height: size-container($inner-size-small);
 
   .spinner {
-    margin-left: - $inner-size-small;
+    margin-left: -$inner-size-small;
 
     .inner {
       width: size-container($inner-size-small);
@@ -125,7 +124,7 @@ $inner-size-large: rhythm(12);
   height: size-container($inner-size-large);
 
   .spinner {
-    margin-left: - $inner-size-large;
+    margin-left: -$inner-size-large;
 
     .inner {
       width: size-container($inner-size-large);
@@ -151,8 +150,6 @@ $inner-size-large: rhythm(12);
     }
   }
 }
-
-
 
 @keyframes outer-rotate {
   0% {
