--- a/libs/sistema/styles/_variables.scss
+++ b/libs/sistema/styles/_variables.scss
@@ -1,3 +1,3 @@
-@import "../../pastanaga-angular/projects/pastanaga-angular/src/styles/variables";
+@import '../../pastanaga-angular/projects/pastanaga-angular/src/styles/variables';
 
-@import "mixins";
+@import 'mixins';
