--- a/libs/sistema/theme/tokens/_tabs.tokens.scss
+++ b/libs/sistema/theme/tokens/_tabs.tokens.scss
@@ -1,6 +1,6 @@
-@import "./palette.tokens";
-@import "./typography.tokens";
-@import "../../../pastanaga-angular/projects/pastanaga-angular/src/styles/theme/spacing.tokens";
+@import './palette.tokens';
+@import './typography.tokens';
+@import '../../../pastanaga-angular/projects/pastanaga-angular/src/styles/theme/spacing.tokens';
 
 $color-text-tab-link: $color-dark-stronger;
 
